--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Guilda HUB</title>
+  <title>Guilda • HUB</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -44,7 +44,7 @@
         </div>
         <div class="leading-tight">
           <div class="text-sm font-black tracking-tight">Guilda HUB</div>
-          <div class="text-[11px] font-medium text-slate-500">Organização e controle para sua guilda</div>
+          <div class="text-[11px] font-medium text-slate-500">Organização e controle</div>
         </div>
       </div>
 
@@ -59,7 +59,7 @@
         <button id="open-auth" type="button"
           class="inline-flex items-center gap-2 rounded-xl bg-emerald-600 px-4 py-2.5 text-sm font-bold text-white shadow-sm hover:bg-emerald-700 active:scale-[.98] transition">
           <i data-lucide="log-in" class="h-4 w-4"></i>
-          <span>Entrar / Criar conta</span>
+          <span>Entrar</span>
         </button>
       </div>
     </div>
@@ -72,13 +72,13 @@
         <div class="reveal" data-reveal>
           <div class="inline-flex items-center gap-2 rounded-full border border-emerald-200 bg-emerald-50 px-3 py-1 text-xs font-bold text-emerald-800">
             <span class="h-2 w-2 rounded-full bg-emerald-500"></span>
-            Foco em Free Fire (FF) • organização de guilda
+            Foco em Free Fire • organização de guilda
           </div>
           <h1 class="mt-4 text-3xl font-black tracking-tight sm:text-4xl">
-            Centralize sua guilda em um só lugar — com clareza, velocidade e padrão.
+            Centralize sua guilda em um só lugar
           </h1>
           <p class="mt-4 text-base leading-relaxed text-slate-600">
-            O Guilda HUB organiza membros, linhas e informações essenciais para o dia a dia da guilda.
+            O Guilda HUB organiza membros, lines e informações essenciais para o dia a dia da guilda.
             Menos caos em grupos, mais previsibilidade nas decisões.
           </p>
 
@@ -98,11 +98,11 @@
           <div class="mt-6 grid grid-cols-3 gap-3">
             <div class="rounded-2xl border border-slate-200 bg-white p-3">
               <div class="text-xs font-bold text-slate-500">Organização</div>
-              <div class="mt-1 text-sm font-black">Membros & linhas</div>
+              <div class="mt-1 text-sm font-black">Membros & lines</div>
             </div>
             <div class="rounded-2xl border border-slate-200 bg-white p-3">
               <div class="text-xs font-bold text-slate-500">Controle</div>
-              <div class="mt-1 text-sm font-black">Permissões</div>
+              <div class="mt-1 text-sm font-black">Metas e tag</div>
             </div>
             <div class="rounded-2xl border border-slate-200 bg-white p-3">
               <div class="text-xs font-bold text-slate-500">Velocidade</div>
@@ -140,10 +140,10 @@
                 <div class="rounded-2xl border border-slate-200 bg-white p-4">
                   <div class="flex items-center gap-2 text-sm font-black">
                     <i data-lucide="list-checks" class="h-4 w-4 text-emerald-700"></i>
-                    Linhas
+                    Lines
                   </div>
                   <p class="mt-2 text-sm text-slate-600">
-                    Estruture equipes/linhas com um padrão único e fácil de consultar.
+                    Estruture equipes/lines com um padrão único e fácil de consultar.
                   </p>
                 </div>
                 <div class="rounded-2xl border border-slate-200 bg-white p-4">
@@ -289,7 +289,7 @@
             <button id="open-auth-3" type="button"
               class="inline-flex items-center gap-2 rounded-2xl border border-emerald-200 bg-emerald-50 px-5 py-3 text-sm font-extrabold text-emerald-800 hover:bg-emerald-100 active:scale-[.98] transition">
               <i data-lucide="arrow-right" class="h-4 w-4"></i>
-              Abrir login/cadastro
+              Abrir login
             </button>
           </div>
         </div>
@@ -325,38 +325,23 @@
       </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="border-t border-slate-200 bg-slate-950">
-      <div class="mx-auto w-full max-w-6xl px-4 py-10 text-white">
-        <div class="flex flex-col items-center gap-6">
-          <div class="flex items-center justify-center gap-3">
-            <a href="https://instagram.com/ottakubrasil" target="_blank" rel="noopener noreferrer"
-               class="flex h-11 w-11 items-center justify-center rounded-full bg-white/10 ring-1 ring-white/10 transition hover:bg-white/15"
-               aria-label="Instagram principal: @ottakubrasil" title="@ottakubrasil">
-              <i data-lucide="instagram" class="h-5 w-5"></i>
-            </a>
-            <a href="https://instagram.com/gameotk" target="_blank" rel="noopener noreferrer"
-               class="flex h-11 w-11 items-center justify-center rounded-full bg-white/10 ring-1 ring-white/10 transition hover:bg-white/15"
-               aria-label="Instagram gaming: @gameotk" title="@gameotk">
-              <i data-lucide="instagram" class="h-5 w-5"></i>
-            </a>
-            <a href="https://ottakubrasil.online" target="_blank" rel="noopener noreferrer"
-               class="flex h-11 w-11 items-center justify-center rounded-full bg-white/10 ring-1 ring-white/10 transition hover:bg-white/15"
-               aria-label="Site: ottakubrasil.online" title="ottakubrasil.online">
-              <i data-lucide="globe" class="h-5 w-5"></i>
-            </a>
-          </div>
-
-          <div class="text-center">
-            <p class="text-sm font-semibold tracking-wide text-white/90">Ottakubrasil • Guilda HUB</p>
-            <p class="mt-2 max-w-xl text-xs leading-relaxed text-white/65">
-              Central de guilda e eventos: organização, velocidade e controle para facilitar sua vida no dia a dia.
-            </p>
-            <p class="mt-4 text-xs text-white/50">© Ottakubrasil</p>
-          </div>
-        </div>
+    <!-- OTK Footer -->
+<footer id="otk-footer" class="mt-12 border-t border-emerald-500/10 text-slate-700">
+  <div class="mx-auto w-full max-w-5xl px-4 py-10">
+    <div class="flex flex-col items-center gap-4">
+      <div class="flex items-center justify-center gap-3">
+        <a href="https://instagram.com/ottakubrasil" target="_blank" class="flex h-11 w-11 items-center justify-center rounded-full bg-black/5 ring-1 ring-black/10 transition hover:bg-black/10"><i data-lucide="instagram" class="h-5 w-5"></i></a>
+        <a href="https://instagram.com/gameotk" target="_blank" class="flex h-11 w-11 items-center justify-center rounded-full bg-black/5 ring-1 ring-black/10 transition hover:bg-black/10"><i data-lucide="instagram" class="h-5 w-5"></i></a>
+        <a href="https://ottakubrasil.online" target="_blank" class="flex h-11 w-11 items-center justify-center rounded-full bg-black/5 ring-1 ring-black/10 transition hover:bg-black/10"><i data-lucide="globe" class="h-5 w-5"></i></a>
       </div>
-    </footer>
+      <div class="text-center">
+        <p class="text-sm font-semibold tracking-wide text-slate-800">Ottakubrasil • Guilda Hub</p>
+        <p class="mt-2 max-w-xl text-xs leading-relaxed text-slate-600">Central de guilda e eventos: organização, velocidade e controle para facilitar sua vida no dia a dia.</p>
+        <p class="mt-4 text-xs text-slate-500">© Ottakubrasil • 2026</p>
+      </div>
+    </div>
+  </div>
+</footer>
   </main>
 
   <!-- Auth drawer -->
@@ -370,7 +355,7 @@
             <i data-lucide="shield" class="h-5 w-5"></i>
           </div>
           <div>
-            <div class="text-sm font-black leading-tight">Acesso</div>
+            <div class="text-sm font-black leading-tight">Acesse Guilda • HUB</div>
             <div class="text-xs font-medium text-slate-500">Entrar ou criar conta</div>
           </div>
         </div>
@@ -422,7 +407,7 @@
             <label class="block text-sm font-medium text-slate-700 mb-1" for="username">Nome de usuário (Guilda)</label>
             <input id="username" type="text" required
               class="w-full rounded-xl border border-slate-200 bg-white px-4 py-3 outline-none focus:border-emerald-400 focus:ring-2 focus:ring-emerald-200"
-              placeholder="Ex: MinhaGuilda" />
+              placeholder="Ex: Ottakubrasil" />
             <p class="mt-1 text-xs text-slate-500">Esse nome identifica sua guilda.</p>
           </div>
 
